Fix styles on mobile devices

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -30,6 +30,14 @@ html {
   border-color: #f5af42;
 }
 
+.wy-nav-top {
+  background: #fcc062;
+}
+
+.wy-nav-content {
+  background-color: white;
+}
+
 .wy-menu-vertical header, .wy-menu-vertical p.caption {
   color: #f5af42;
 }
